Chapter 14 C++ Capnproto RPC example add

--- a/src/ch14/cpp/CMakeLists.txt
+++ b/src/ch14/cpp/CMakeLists.txt
@@ -13,5 +13,6 @@ endif()
 
 if (UNIX)
     add_subdirectory("grpc-example")
+    add_subdirectory("capnp-example")
     add_subdirectory("phistache-example")
 endif()
