Image build speed improved

--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -2,7 +2,7 @@ FROM gcc:13
 
 MAINTAINER artiomn
 
-ENV DEBIAN_FRONTEND=noninteractive INSIDE_NB_DOCKER_CONTAINER=1
+ENV DEBIAN_FRONTEND=noninteractive INSIDE_NB_DOCKER_CONTAINER=1 GIT_CLONE_JOBS=16
 
 RUN apt-get update \
   && echo 'deb https://deb.debian.org/debian bookworm-backports main contrib non-free' >> /etc/apt/sources.list.d/backports.list \
@@ -113,7 +113,7 @@ RUN apt-get update \
 #  && rm -rf CMake
 
 RUN \
-  git clone --recursive --depth 1 https://github.com/google/flatbuffers \
+  git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/google/flatbuffers \
   && cd flatbuffers \
   && cmake \
     -DCMAKE_BUILD_TYPE=Release -B build \
@@ -122,14 +122,14 @@ RUN \
   && cd / \
   && rm -rf flatbuffers \
   # Build only gRPC console \
-  && git clone --recursive --depth 1 https://github.com/grpc/grpc \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/grpc/grpc \
   && cd grpc \
   && cmake -B build -DgRPC_BUILD_TESTS=ON -DgRPC_INSTALL=ON -DCMAKE_INSTALL_PREFIX=/usr/local . \
   && cmake --build build --target grpc_cli \
   && mv build/grpc_cli /usr/local/bin/ \
   && cd / \
   && rm -rf grpc \
-  && git clone --recursive --depth 1 https://github.com/pistacheio/pistache \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/pistacheio/pistache \
   && cd pistache \
   && meson setup build \
     --buildtype=debug \
@@ -140,7 +140,7 @@ RUN \
   && meson install -C build \
   && cd / \
   && rm -rf pistache \
-  && git clone --recursive --depth 1 https://github.com/etr/libhttpserver \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/etr/libhttpserver \
   && cd libhttpserver \
   && ./bootstrap \
   && mkdir build \
@@ -150,14 +150,14 @@ RUN \
   && make install \
   && cd / \
   && rm -rf libhttpserver \
-  && git clone --recursive --depth 1 https://github.com/corvusoft/restbed.git \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/corvusoft/restbed.git \
   && cd restbed \
   && cmake -B build -DBUILD_SSL=NO -DBUILD_TESTS=NO -DCMAKE_INSTALL_PREFIX=/usr/local . \
   && cmake --build build --parallel \
   && cmake --install build --prefix "/usr/local" \
   && cd / \
   && rm -rf restbed \
-  && git clone --recursive --depth 1 https://github.com/oatpp/oatpp.git \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/oatpp/oatpp.git \
   && cd oatpp \
   # This is necessary to build oatpp \
   && mkdir build \
@@ -168,35 +168,35 @@ RUN \
   && cmake --install . --prefix "/usr/local" \
   && cd / \
   && rm -rf oatpp \
-  && git clone --recursive --depth 1 https://github.com/oatpp/oatpp-websocket.git \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/oatpp/oatpp-websocket.git \
   && cd oatpp-websocket \
   && cmake -B build -DCMAKE_INSTALL_PREFIX=/usr/local . \
   && cmake --build build --parallel \
   && cmake --install build --prefix "/usr/local" \
   && cd / \
   && rm -rf oatpp-websocket \
-  && git clone --recursive --depth 1 https://github.com/oatpp/oatpp-swagger.git \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/oatpp/oatpp-swagger.git \
   && cd oatpp-swagger \
   && cmake -B build -DCMAKE_INSTALL_PREFIX=/usr/local . \
   && cmake --build build --parallel \
   && cmake --install build --prefix "/usr/local" \
   && cd / \
   && rm -rf oatpp-swagger \
-  && git clone --recursive --depth 1 https://github.com/oatpp/oatpp-curl.git \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/oatpp/oatpp-curl.git \
   && cd oatpp-curl \
   && cmake -B build -DCMAKE_INSTALL_PREFIX=/usr/local . \
   && cmake --build build --parallel \
   && cmake --install build --prefix "/usr/local" \
   && cd / \
   && rm -rf oatpp-curl \
-  && git clone --recursive --depth 1 https://github.com/Thalhammer/jwt-cpp \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/Thalhammer/jwt-cpp \
   && cd jwt-cpp \
   && cmake -B build -DBUILD_SSL=YES -DBUILD_TESTS=NO -DCMAKE_INSTALL_PREFIX=/usr/local . \
   && cmake --build build --parallel \
   && cmake --install build --prefix "/usr/local" \
   && rm -rf jwt-cpp \
   && cd / \
-  && git clone --recursive --depth 1 https://github.com/reo7sp/tgbot-cpp \
+  && git clone --recursive --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/reo7sp/tgbot-cpp \
   && cd tgbot-cpp \
   && cmake . \
   && cmake --build . --parallel \
@@ -228,7 +228,7 @@ RUN \
 #  && make install \
   && cd / \
   && rm -rf CppServer \
-  && git clone --depth 1 https://github.com/matt-42/lithium.git \
+  && git clone --depth 1 -j=${GIT_CLONE_JOBS} --single-branch https://github.com/matt-42/lithium.git \
   && cd lithium \
 #  && ./vcpkg/bootstrap-vcpkg.sh \
 #  && vcpkg/vcpkg install \
