--- a/src/ch11/cpp/asio_resolver/CMakeLists.txt
+++ b/src/ch11/cpp/asio_resolver/CMakeLists.txt
@@ -8,4 +8,4 @@ set(${PROJECT_NAME}_SRC main.cpp)
 
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
 target_include_directories("${PROJECT_NAME}" PRIVATE ${Boost_INCLUDE_DIRS})
-target_link_libraries("${PROJECT_NAME}" PRIVATE ${Boost_LIBRARIES} pthread)
+target_link_libraries("${PROJECT_NAME}" PRIVATE ${Boost_LIBRARIES})
