--- a/src/ch11/cpp/asio_server/CMakeLists.txt
+++ b/src/ch11/cpp/asio_server/CMakeLists.txt
@@ -10,4 +10,4 @@ source_group(source FILES ${${PROJECT_NAME}_SRC}})
 
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
 target_include_directories("${PROJECT_NAME}" PRIVATE ${Boost_INCLUDE_DIRS})
-target_link_libraries("${PROJECT_NAME}" PRIVATE ${Boost_LIBRARIES} pthread)
+target_link_libraries("${PROJECT_NAME}" PRIVATE ${Boost_LIBRARIES})
