--- a/src/ch17/cpp/cpp-httplib-example/CMakeLists.txt
+++ b/src/ch17/cpp/cpp-httplib-example/CMakeLists.txt
@@ -5,9 +5,8 @@ project("${CHAPTER_NAME}cpp-httplib-example" C CXX)
 find_package(OpenSSL REQUIRED)
 
 add_executable("${PROJECT_NAME}-server" "server.cpp")
-target_link_libraries("${PROJECT_NAME}-server" pthread)
 add_executable("${PROJECT_NAME}-client" "client.cpp")
-target_link_libraries("${PROJECT_NAME}-client" pthread OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries("${PROJECT_NAME}-client" OpenSSL::SSL OpenSSL::Crypto)
 
 if(WIN32)
   target_link_libraries("${PROJECT_NAME}" PRIVATE wsock32 ws2_32)
