--- a/src/ch17/cpp/CMakeLists.txt
+++ b/src/ch17/cpp/CMakeLists.txt
@@ -10,5 +10,6 @@ if (UNIX)
     add_subdirectory("restbed-example")
 #    add_subdirectory("cppserver-example")
     add_subdirectory("lithium-example")
+    add_subdirectory("llhttp-example")
     add_subdirectory("oatpp-example")
 endif()
