SDL_net example added

--- a/src/ch17/cpp/CMakeLists.txt
+++ b/src/ch17/cpp/CMakeLists.txt
@@ -12,4 +12,5 @@ if (UNIX)
     add_subdirectory("lithium-example")
     add_subdirectory("llhttp-example")
     add_subdirectory("oatpp-example")
+    add_subdirectory("sdl-get")
 endif()
