--- a/src/ch12/cpp/CMakeLists.txt
+++ b/src/ch12/cpp/CMakeLists.txt
@@ -1,3 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 
-add_subdirectory(uwebsockets-example)
+if(NOT WIN32)
+    add_subdirectory(uwebsockets-example)
+endif()
