--- a/src/ch18/python/octabot/Dockerfile
+++ b/src/ch18/python/octabot/Dockerfile
@@ -1,13 +1,14 @@
 FROM debian:11.6
 
-RUN apt update
-RUN apt install octave python3 python3-pip git -y
-
 WORKDIR /opt/octabot
 ADD * /opt/octabot/
-RUN pip3 install -r requirements.txt
 
-RUN useradd -ms /bin/bash botuser
+RUN apt update \
+  && apt-get --no-install-recommends --show-progress install octave python3 python3-pip git -y \
+  && apt-get clean \
+  && pip3 install --break-system-packages -r requirements.txt \
+  && useradd -ms /bin/bash botuser
+
 USER botuser
 
 CMD ["sh","/opt/octabot/start.sh"]
