--- a/src/ch19/cpp/CMakeLists.txt
+++ b/src/ch19/cpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
 
-#if(NOT WIN32)
-#    add_subdirectory(zmq-example)
-#endif()
+if(NOT WIN32)
+    add_subdirectory(zmq-example)
+endif()
