--- a/src/ch19/cpp/zmq-example/CMakeLists.txt
+++ b/src/ch19/cpp/zmq-example/CMakeLists.txt
@@ -6,3 +6,12 @@ find_package(cppzmq REQUIRED)
 
 add_executable("${PROJECT_NAME}-push-pull" "push-pull.cpp")
 target_link_libraries("${PROJECT_NAME}-push-pull" PRIVATE cppzmq)
+
+add_executable("${PROJECT_NAME}-rep-server" "rep-server.cpp")
+target_link_libraries("${PROJECT_NAME}-rep-server" PRIVATE cppzmq)
+
+add_executable("${PROJECT_NAME}-req-client" "req-client.cpp")
+target_link_libraries("${PROJECT_NAME}-req-client" PRIVATE cppzmq)
+
+add_executable("${PROJECT_NAME}-router" "router.cpp")
+target_link_libraries("${PROJECT_NAME}-router" PRIVATE cppzmq)
