--- a/src/ch19/cpp/CMakeLists.txt
+++ b/src/ch19/cpp/CMakeLists.txt
@@ -4,4 +4,5 @@ cmake_minimum_required(VERSION 3.10)
 if(NOT WIN32)
     add_subdirectory(zeromq)
     add_subdirectory(kafka)
+    add_subdirectory(nats)
 endif()
