--- a/src/ch19/cpp/nats/docker-compose.yml
+++ b/src/ch19/cpp/nats/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 4222:4222
       - 8222:8222
-    command: " --http_port 8222 "
+    command: " --http_port 8222 -D "
     networks: ["nats"]
 
 networks:
