--- a/src/ch19/container_configs/kafka/docker-compose.yml
+++ b/src/ch19/container_configs/kafka/docker-compose.yml
@@ -37,6 +37,8 @@ services:
   kafka-ui:
     container_name: kafka-ui
     image: provectuslabs/kafka-ui:latest
+    depends_on:
+      - kafka
     ports:
       - 8082:8080
     environment:
