Modbus examples build added

--- a/src/ch19/cpp/CMakeLists.txt
+++ b/src/ch19/cpp/CMakeLists.txt
@@ -6,4 +6,6 @@ if(NOT WIN32)
     add_subdirectory(kafka)
     add_subdirectory(nats)
     add_subdirectory(mqtt)
+    add_subdirectory(amqp)
+    add_subdirectory(modbus)
 endif()
