--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -36,6 +36,7 @@ RUN \
     libgrpc++-dev \
     libmariadb-dev \
     libmicrohttpd-dev \
+    libmodbus-dev \
     libmosquitto-dev \
     libnats-dev \
     libpcap-dev \
