Python torrent example add

--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -84,6 +84,7 @@ RUN \
     python3-hypercorn \
     python3-httplib2 \
     python3-kafka \
+    python3-libtorrent \
     python3-matplotlib \
     python3-mpi4py \
     python3-paho-mqtt \
