--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -28,12 +28,14 @@ RUN \
     libboost-all-dev \
     libc-ares-dev \
     libcapnp-dev \
+    libcppunit-dev \
     libevent-2\* libevent-dev libev-dev libuv1-dev \
     libgtest-dev \
     libglib2.0-dev \
     libgtk2.0-dev \
     libgtk-3-dev \
     libgrpc++-dev \
+    liblog4cxx-dev \
     libmariadb-dev \
     libmicrohttpd-dev \
     libmodbus-dev \
